ADded csv processing for adding those people